# mentat

./: M3-KICKOFF.md  M3-PROGRESS.md  NEXT-STEPS.md  PROJECT-STATUS.md  QUICK-START.md  README.md  ROADMAP.md  SESSION-COMPLETE.md
apps/ai-agents/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
apps/ai-agents/examples/: quickstart.py
apps/ai-agents/src/: __init__.py  config.py  orchestrator.py  types.py
apps/ai-agents/src/agents/: __init__.py  base.py  draft.py  scout.py  validator.py
apps/backend/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
apps/backend/src/: __init__.py  config.py  database.py  main.py
apps/backend/src/api/v1/: ai_generation.py  auth.py  curator.py  drafts.py  markets.py
apps/backend/src/middleware/: __init__.py  auth.py
apps/backend/src/models/: __init__.py  curation.py  market.py  user.py
apps/backend/src/schemas/: __init__.py  curation.py  market.py  user.py
apps/indexer/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
apps/indexer/src/: config.ts  database.ts  index.ts  logger.ts  schema.sql
apps/indexer/src/listeners/: logListener.ts
apps/indexer/src/parsers/: eventParser.ts
apps/indexer/src/repositories/: eventRepository.ts
apps/indexer/src/types/: events.ts
apps/solana-programs/: Anchor.toml  README.md  mktRU9S5U6cKzX6dvKeyUgm8g8VPRZxuzizfNX18cR1.json  package.json
apps/solana-programs/programs/market-factory/: Cargo.toml
apps/solana-programs/programs/market-factory/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
apps/solana-programs/programs/market-factory/src/instructions/: add_liquidity.rs  close_market.rs  execute_trade.rs  initialize_market.rs  mod.rs  remove_liquidity.rs  (+1 more)
apps/solana-programs/programs/market-settlement/: Cargo.toml
apps/solana-programs/programs/market-settlement/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
apps/solana-programs/programs/market-settlement/src/instructions/: claim_payout.rs  mod.rs  open_dispute.rs  resolve_dispute.rs  resolve_market.rs  submit_proof.rs  verify_proof.rs
apps/solana-programs/tests/: market-factory.ts  mentat-programs.ts
apps/web/: .env.example  .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json
apps/web/scripts/: verify-wallet-integration.sh
apps/web/src/: App.vue  main.ts
apps/web/src/components/: AppHeader.vue  AppHelp.vue  AppNavigation.vue  AuthModal.vue  DiffView.vue  DraftPreview.vue  MarketCard.vue  MarketSocial.vue  MetricCard.vue  NetworkIndicator.vue  PageHeader.vue  ProofTimeline.vue  SparklineChart.vue  StatusBadge.vue  TestnetBanner.vue  TopBar.vue
apps/web/src/components/trading/: PositionCard.vue  TradeConfirmModal.vue  TradingPanel.vue  index.ts
apps/web/src/components/wallet/: WalletConnectButton.vue  WalletModal.vue
apps/web/src/composables/: useSolana.ts
apps/web/src/config/: api.ts  network.ts
apps/web/src/idl/: market_factory.json  market_settlement.json
apps/web/src/layouts/: DefaultLayout.vue
apps/web/src/plugins/: wallet.ts
apps/web/src/router/: index.ts
apps/web/src/services/: adapters.ts  aiAgents.ts  api.ts  mockApi.ts  solanaProgram.ts
apps/web/src/stores/: README.md  auth.ts  help.ts  trading.ts  wallet.ts
apps/web/src/styles/: global.css
apps/web/src/types/: api.ts  index.ts  trading.ts
apps/web/src/views/: AccountDashboard.vue  CreatorStudio.vue  CuratorConsole.vue  DiscoveryHub.vue  MarketDetail.vue  ProofSubmission.vue
docs/: AI-AGENTS-SUMMARY.md  AUTH-FLOW-CLARIFICATION.md  DEAD-CODE-ANALYSIS.md  DEAD-CODE-CLEANUP-COMPLETE.md  INTEGRATION.md  M2-COMPLETION-SUMMARY.md  M3-IMPLEMENTATION-PLAN.md  M3-PROGRESS-SUMMARY.md  MARKET-SETTLEMENT-IMPLEMENTATION.md  NETWORK-INDICATORS-IMPLEMENTED.md  NON-SOLANA-TODOS.md  PHASE-4-FOUNDATION-COMPLETE.md  PHASE-4-TRADING-INTERFACE-COMPLETE.md  PHASE-4-TRADING-INTERFACE-PLAN.md  README.md  TODO-CLEANUP-COMPLETE.md  TODO-FINAL-STATUS.md  TODO-STATUS.md  WALLET-INTEGRATION-STATUS.md  WALLET-INTEGRATION-SUCCESS.md  WEB-INTEGRATION-SUMMARY.md  abstractions.md  ai-architecture.md  architecture.md  economics.md  fee-model.md  implementation-plan.md  initial.md  principles.md  product-overview.md  quality.md  tokenomics.md  web-prototype.md
docs/slides/: business.md  core-technology.md
docs/whitepaper/: Makefile  README.md  mentat-protocol-whitepaper.tex  references.bib
documentation/: .gitignore  mkdocs.yml
documentation/docs/: index.md
documentation/docs/architecture/: project-structure.md  system-integration.md  ui-architecture.md
documentation/docs/guides/: network-configuration.md
documentation/docs/implementation/: ai-agents.md  creator-studio.md  curator-console.md  event-indexer.md  market-factory.md  phase-4-foundation.md  trading-interface-plan.md  trading-interface.md  wallet-integration.md
documentation/docs/markets/: market-standard.md  solana-market-schema.md
documentation/docs/milestones/: m2-completion.md  m3-plan.md  m3-progress.md
documentation/docs/overview/: initial-concept.md
documentation/docs/reference/: dead-code-analysis.md  dead-code-cleanup.md  network-indicators.md  non-solana-todos.md  todo-cleanup.md  todo-final-status.md  todo-status.md  wallet-integration-status.md  wallet-integration-success.md  web-integration-summary.md
scripts/: setup-dev.sh
