[project]
name = "mentat-ai-agents"
version = "0.1.0"
description = "AI agent orchestration for Mentat Protocol market creation"
requires-python = ">=3.11"
authors = [{ name = "Cryptuon Research", email = "contact@cryptuon.com" }]
keywords = ["solana", "prediction-markets", "ai", "zktls", "defi", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "dspy-ai>=2.4.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "httpx>=0.26.0",
    "redis>=5.0.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "ipython>=8.20.0",
]

[project.urls]
Homepage = "https://mentat.cryptuon.com/"
Documentation = "https://docs.cryptuon.com/mentat/"
Repository = "https://github.com/cryptuon/mentat"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
