[package]
name = "market-settlement"
version = "0.1.0"
description = "Market Settlement and Resolution Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "market_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
