[package]
name = "market-settlement"
version = "0.1.0"
description = "Market settlement and resolution program for Mentat Protocol"
edition = "2021"
authors = ["Cryptuon Research <contact@cryptuon.com>"]
license = "MIT"
homepage = "https://mentat.cryptuon.com/"
documentation = "https://docs.cryptuon.com/mentat/"
repository = "https://github.com/cryptuon/mentat"
keywords = ["solana", "prediction-markets", "zktls", "defi", "anchor"]

[lib]
crate-type = ["cdylib", "lib"]
name = "market_settlement"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
